--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,10 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="keywords" content=""/>
+    <meta name="description" content="">
+
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=BenchNine">
@@ -54,12 +58,27 @@
           <div id="openModal" class="modalDialog">
             <div class="modal-box">
               <div class="modal-text">
-                  This should be in the RSVP form
+
+                  <img src="http://www.twochums.com/wp-content/uploads/2014/09/chanel-logo.jpg" alt="chanel nyfw">
+                  <h4>RSVP</h4>
+                  <p>Don't miss out.</p>
                   <form>
-                  </form>   
+                    <input type="text" name="firstname" placeholder="First Name">
+                    <input type="text" name="lastname" placeholder="Last Name">
+                    <input type="text" name="email" placeholder="Email Address">
+                  </form> 
+
+                  <p>Total number of attendees:</p>
+                  <select>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                  </select>
+
+                  <a href="#close" title="Close" class="close">CLOSE</a>  
                 </div>
               </div>
-              <a href="#close" title="Close" class="close">X</a>
             </div>  
           </div>
         </div>
