--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -63,11 +63,6 @@ body {
       font-size: 30px;
       padding: 0px;
     }
-    h3 {
-      font-family: $primary-font;
-      font-size: 25px;
-      padding: 0px;
-    }
     p {
       font-family: $primary-font;
       font-size: 20px;
@@ -178,12 +173,12 @@ body {
         border-radius: 5px;
         padding: 5px;
         border: 1px solid #000;
-        margin: 10px;
+        margin-bottom: 5px;
       }
       select {
         font-size: 25px;
         font-family: $secondary-font;
-        margin-bottom: 15px;
+        margin-bottom: 5px;
       }
     }
   }
@@ -348,6 +343,16 @@ footer {
     #main {
       h1 {
         font-size: 25px;
+      }
+      p {
+        font-size: 15px;
+      }
+    }
+    #items {
+      .four {
+        .modal-box {
+          top: 0;
+        }
       }
     }
   }
