edit to modal and preloader

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,7 @@
 
       <div id="main">
         <h1>FASHION WEEK AFTER PARTY</h1>
+        <h3>DON'T MISS IT</h3>
         <p>You never quite know where Karl Lagerfeld is going to take you when he puts on a Chanel show, but one thing is certain: the scene is going to be something out of your wildest fantasies. Come celebrate NYFW.</p>
       </div>
 
@@ -60,7 +61,6 @@
 
                   <img src="http://www.twochums.com/wp-content/uploads/2014/09/chanel-logo.jpg" alt="chanel nyfw">
                   <h4>RSVP</h4>
-                  <p>Don't miss out.</p>
                   <form>
                     <input type="text" name="firstname" placeholder="First Name">
                     <input type="text" name="lastname" placeholder="Last Name">
@@ -75,7 +75,7 @@
                     <option value="4">4</option>
                   </select>
 
-                  <a href="#close" title="Close" class="close">CLOSE</a>  
+                  <a href="#close" title="Close" class="close">SUBMIT</a>  
                 </div>
               </div>
             </div>  
