h3 sass accidentally removed

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -63,6 +63,11 @@ body {
       font-size: 30px;
       padding: 0px;
     }
+    h3 {
+      font-family: $primary-font;
+      font-size: 25px;
+      padding: 0px;
+    }
     p {
       font-family: $primary-font;
       font-size: 20px;
