--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,49 +65,55 @@ body {
   padding: 0px;
 }
 /* line 66, ../sass/style.scss */
+#container #main h3 {
+  font-family: "Oswald";
+  font-size: 25px;
+  padding: 0px;
+}
+/* line 71, ../sass/style.scss */
 #container #main p {
   font-family: "Oswald";
   font-size: 20px;
   padding: 0px;
 }
-/* line 72, ../sass/style.scss */
+/* line 77, ../sass/style.scss */
 #container #items {
   float: left;
   width: 380px;
 }
-/* line 76, ../sass/style.scss */
+/* line 81, ../sass/style.scss */
 #container #items .one,
 #container #items .three {
   background: #4A7FE8;
 }
-/* line 80, ../sass/style.scss */
+/* line 85, ../sass/style.scss */
 #container #items .one h3,
 #container #items .three h3 {
   color: #fff;
 }
-/* line 84, ../sass/style.scss */
+/* line 89, ../sass/style.scss */
 #container #items .two,
 #container #items .four {
   background: #EEECED;
 }
-/* line 89, ../sass/style.scss */
+/* line 94, ../sass/style.scss */
 #container #items .item {
   float: left;
   width: 380px;
   height: 75px;
 }
-/* line 94, ../sass/style.scss */
+/* line 99, ../sass/style.scss */
 #container #items .item h3 {
   font-size: 20px;
   font-family: "Oswald";
   text-align: center;
 }
-/* line 99, ../sass/style.scss */
+/* line 104, ../sass/style.scss */
 #container #items .item h3 a {
   text-decoration: none;
   color: #000;
 }
-/* line 107, ../sass/style.scss */
+/* line 112, ../sass/style.scss */
 #container #items .four .modalDialog {
   position: fixed;
   top: 0;
@@ -120,7 +126,7 @@ body {
   pointer-events: none;
   background-color: rgba(0, 0, 0, 0.8);
 }
-/* line 119, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
 #container #items .four .modal-box {
   color: #000;
   width: 300px;
@@ -129,29 +135,29 @@ body {
   font-size: 25px;
   text-align: center;
 }
-/* line 127, ../sass/style.scss */
+/* line 132, ../sass/style.scss */
 #container #items .four .modal-box h4 {
   font-family: "Oswald";
   color: #F5007A;
   margin: 0;
   font-size: 30px;
 }
-/* line 133, ../sass/style.scss */
+/* line 138, ../sass/style.scss */
 #container #items .four .modal-box p {
   margin: 10px 0 0 0;
 }
-/* line 136, ../sass/style.scss */
+/* line 141, ../sass/style.scss */
 #container #items .four .modal-box img {
   width: 50px;
   height: auto;
 }
-/* line 141, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 #container #items .four .modalDialog:target {
   opacity: 1;
   pointer-events: auto;
   transition: opacity .3s;
 }
-/* line 146, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 #container #items .four .modalDialog > .modal-box {
   position: relative;
   color: #000;
@@ -161,7 +167,7 @@ body {
   border: 3px solid #000;
   background: #FFF;
 }
-/* line 155, ../sass/style.scss */
+/* line 160, ../sass/style.scss */
 #container #items .four .close {
   color: #000;
   text-align: center;
@@ -174,7 +180,7 @@ body {
   color: #F5007A;
   font-family: "Oswald";
 }
-/* line 167, ../sass/style.scss */
+/* line 172, ../sass/style.scss */
 #container #items .four input {
   width: 90%;
   margin-right: auto;
@@ -186,19 +192,19 @@ body {
   border: 1px solid #000;
   margin-bottom: 5px;
 }
-/* line 178, ../sass/style.scss */
+/* line 183, ../sass/style.scss */
 #container #items .four select {
   font-size: 25px;
   font-family: "BenchNine";
   margin-bottom: 5px;
 }
-/* line 185, ../sass/style.scss */
+/* line 190, ../sass/style.scss */
 #container #fashion {
   display: block;
   width: 100%;
   height: 300px;
 }
-/* line 190, ../sass/style.scss */
+/* line 195, ../sass/style.scss */
 #container #fashion .fashion-item {
   float: left;
   width: 25%;
@@ -206,7 +212,7 @@ body {
   position: relative;
   display: block;
 }
-/* line 197, ../sass/style.scss */
+/* line 202, ../sass/style.scss */
 #container #fashion .fashion-item .fashion-inner {
   height: 100%;
   width: 100%;
@@ -217,12 +223,12 @@ body {
   padding: 0;
   transition: opacity .3s;
 }
-/* line 208, ../sass/style.scss */
+/* line 213, ../sass/style.scss */
 #container #fashion .fashion-item .inner-one,
 #container #fashion .fashion-item .inner-three {
   background: #4A7FE8;
 }
-/* line 212, ../sass/style.scss */
+/* line 217, ../sass/style.scss */
 #container #fashion .fashion-item .inner-one p,
 #container #fashion .fashion-item .inner-three p {
   color: #fff;
@@ -231,74 +237,74 @@ body {
   line-height: 200px;
   font-family: "BenchNine";
 }
-/* line 220, ../sass/style.scss */
+/* line 225, ../sass/style.scss */
 #container #fashion .fashion-item .inner-two {
   background: url(http://img0.etsystatic.com/002/0/5898062/il_570xN.356502012_9hg7.jpg);
   background-size: cover;
 }
-/* line 224, ../sass/style.scss */
+/* line 229, ../sass/style.scss */
 #container #fashion .fashion-item .inner-four {
   background: url(http://ua-cdn.stylecaster.com/post/2012/07/10/21273-mcqueen-clutch-and-chanel-pearls.jpg);
   background-size: cover;
 }
-/* line 230, ../sass/style.scss */
+/* line 235, ../sass/style.scss */
 #container #fashion .fashion-item:hover .fashion-inner {
   opacity: 1;
   transition: opacity .3s;
 }
-/* line 237, ../sass/style.scss */
+/* line 242, ../sass/style.scss */
 #container #fashion .fashion-one {
   background: url(http://swaggmags.com/wp-content/uploads/2013/05/0x600.jpg);
   background-size: cover;
 }
-/* line 241, ../sass/style.scss */
+/* line 246, ../sass/style.scss */
 #container #fashion .fashion-two {
   background: url(http://www4.pictures.zimbio.com/gi/Chanel+Runway+Paris+Fashion+Week+Haute+Couture+h4td6lvcfVel.jpg);
   background-size: cover;
 }
-/* line 245, ../sass/style.scss */
+/* line 250, ../sass/style.scss */
 #container #fashion .fashion-three {
   background: url(http://lamodellamafia.com/wp-content/uploads/2013/04/la-modella-mafia-Chanel-Fall-2013-runway-7.jpg);
   background-size: cover;
 }
-/* line 249, ../sass/style.scss */
+/* line 254, ../sass/style.scss */
 #container #fashion .fashion-four {
   background: url(http://www3.pictures.zimbio.com/gi/Chanel+Runway+Paris+Fashion+Week+Spring+Summer+j2FbQU4J3Tvl.jpg);
   background-size: cover;
 }
-/* line 254, ../sass/style.scss */
+/* line 259, ../sass/style.scss */
 #container #map {
   max-width: 960px;
   width: 100%;
   display: inline-block;
 }
-/* line 259, ../sass/style.scss */
+/* line 264, ../sass/style.scss */
 #container #map #lincolncenter {
   height: 300px;
   display: block;
   border: 5px solid #F5007A;
 }
-/* line 264, ../sass/style.scss */
+/* line 269, ../sass/style.scss */
 #container #map .gm-style-iw * {
   display: block;
   width: 100%;
 }
-/* line 268, ../sass/style.scss */
+/* line 273, ../sass/style.scss */
 #container #map .gm-style-iw h4, #container #map .gm-style-iw p {
   margin: 0;
   padding: 0;
 }
-/* line 272, ../sass/style.scss */
+/* line 277, ../sass/style.scss */
 #container #map .gm-style-iw a {
   color: #4272db;
 }
 
-/* line 278, ../sass/style.scss */
+/* line 283, ../sass/style.scss */
 footer {
   height: 50px;
   width: 100%;
 }
-/* line 282, ../sass/style.scss */
+/* line 287, ../sass/style.scss */
 footer p {
   font-family: "Oswald";
   font-size: 20px;
@@ -307,55 +313,55 @@ footer p {
 
 /* Smaller Screens - 1000 Breakpoint -------> */
 @media screen and (max-width: 1000px) {
-  /* line 292, ../sass/style.scss */
+  /* line 297, ../sass/style.scss */
   #container {
     width: 100%;
   }
 }
 /* Smaller Screens - 980 Breakpoint -------> */
 @media screen and (max-width: 980px) {
-  /* line 301, ../sass/style.scss */
+  /* line 306, ../sass/style.scss */
   #container #main {
     width: 60%;
   }
-  /* line 304, ../sass/style.scss */
+  /* line 309, ../sass/style.scss */
   #container #items {
     width: 40%;
   }
-  /* line 306, ../sass/style.scss */
+  /* line 311, ../sass/style.scss */
   #container #items .item {
     width: 100%;
   }
 }
 /* Smaller Screens - 800 Breakpoint -------> */
 @media screen and (max-width: 800px) {
-  /* line 318, ../sass/style.scss */
+  /* line 323, ../sass/style.scss */
   #container #fashion .fashion-item {
     width: 50%;
   }
 }
 /* Smaller Screens - 650 Breakpoint -------> */
 @media screen and (max-width: 650px) {
-  /* line 330, ../sass/style.scss */
+  /* line 335, ../sass/style.scss */
   #container #main {
     width: 100%;
   }
-  /* line 333, ../sass/style.scss */
+  /* line 338, ../sass/style.scss */
   #container #items {
     width: 100%;
   }
 }
 /* Smaller Screens - 550 Breakpoint -------> */
 @media screen and (max-width: 550px) {
-  /* line 344, ../sass/style.scss */
+  /* line 349, ../sass/style.scss */
   #container #main h1 {
     font-size: 25px;
   }
-  /* line 347, ../sass/style.scss */
+  /* line 352, ../sass/style.scss */
   #container #main p {
     font-size: 15px;
   }
-  /* line 353, ../sass/style.scss */
+  /* line 358, ../sass/style.scss */
   #container #items .four .modal-box {
     top: 0;
   }
