map border and removed gif

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -264,7 +264,7 @@ body {
      #lincolncenter {
         height:300px;
         display: block;
-        border: 5px solid $pink;
+        border: 5px solid $blue;
     }
     .gm-style-iw * {
         display: block;
