--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -282,7 +282,7 @@ body {
 #container #map #lincolncenter {
   height: 300px;
   display: block;
-  border: 5px solid #F5007A;
+  border: 5px solid #4A7FE8;
 }
 /* line 269, ../sass/style.scss */
 #container #map .gm-style-iw * {
