--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
     <![endif]-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="keywords" content=""/>
-    <meta name="description" content="">
+    <meta name="keywords" content="fashion, chanel, nyfw, koren leslie cohen"/>
+    <meta name="description" content="NOT a real invitation.">
 
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
@@ -44,11 +44,9 @@
         <div class="item one">
           <h3>9pm February 21, 2015</h3>
         </div>
-
         <div class="item two">
           <h3>Lincoln Center, NYC</h3>
         </div>
-
         <div class="item three">
           <h3>$75 per person</h3>
         </div>
@@ -83,29 +81,24 @@
         </div>
 
       <div id="fashion">
-
         <div class="fashion-item fashion-one">
           <div class="fashion-inner inner-one">
             <p>#chanel</p>
           </div>
         </div>
-
         <div class="fashion-item fashion-two">
           <div class="fashion-inner inner-two">
           </div>
         </div>
-
         <div class="fashion-item fashion-three">
           <div class="fashion-inner inner-three">
             <p>#nyfw</p>
           </div>
         </div>
-
         <div class="fashion-item fashion-four">
           <div class="fashion-inner inner-four">
           </div>
         </div>
-
       </div>
 
       <div id="map">
