modal font color

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -131,7 +131,7 @@ body {
 
         h4 {
           font-family: $primary-font;
-          color: $pink;
+          color: $blue;
           margin: 0;
           font-size: 30px;
         }
@@ -166,7 +166,7 @@ body {
         width: 100%;
         font-weight: normal;
         text-decoration: none;
-        color: $pink;
+        color: $blue;
         font-family: $primary-font;
       }
       input {
