--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -138,7 +138,7 @@ body {
 /* line 132, ../sass/style.scss */
 #container #items .four .modal-box h4 {
   font-family: "Oswald";
-  color: #F5007A;
+  color: #4A7FE8;
   margin: 0;
   font-size: 30px;
 }
@@ -177,7 +177,7 @@ body {
   width: 100%;
   font-weight: normal;
   text-decoration: none;
-  color: #F5007A;
+  color: #4A7FE8;
   font-family: "Oswald";
 }
 /* line 172, ../sass/style.scss */
