--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,16 +24,18 @@
         <div class="preloader-gif"></div>
       </div>
 
-      <!-- Header images -->
+      <!-- Header images -->  
       <header></header>
       <div id="header-photo"></div>
 
+      <!-- Main event info --> 
       <div id="main">
         <h1>FASHION WEEK AFTER PARTY</h1>
         <h3>DON'T MISS IT</h3>
         <p>You never quite know where Karl Lagerfeld is going to take you when he puts on a Chanel show, but one thing is certain: the scene is going to be something out of your wildest fantasies. Come celebrate NYFW.</p>
       </div>
 
+      <!-- Event details --> 
       <div id="items">
 
         <div class="item one">
@@ -46,6 +48,7 @@
           <h3>$75 per person</h3>
         </div>
 
+        <!-- RSVP modal --> 
         <div class="item four"> 
           <h3><a href="#openModal">RSVP</a></h3>
           <div id="openModal" class="modalDialog">
@@ -75,6 +78,7 @@
           </div>
         </div>
 
+      <!-- Fashion photos --> 
       <div id="fashion">
         <div class="fashion-item fashion-one">
           <div class="fashion-inner inner-one">
@@ -96,12 +100,14 @@
         </div>
       </div>
 
+      <!-- Map -->
       <div id="map">
         <div id="lincolncenter"></div>
       </div>
 
     </div>
 
+    <!-- Footer -->
     <footer>
       <p>NOT affiliated with Chanel. NOT a real event.</p>
     </footer>
