--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
         <!-- RSVP modal --> 
         <div class="item four"> 
           <h3><a href="#openModal">RSVP</a></h3>
-          <div id="openModal" class="modalDialog">
+          <div id="openModal" class="modalDialog" style="display:none">
             <div class="modal-box">
               <div class="modal-text">
 
